<?xml version="1.0"?>
<package format="2">
  <name>forklift_server</name>
  <version>0.0.0</version>
  <description>The action_demo package</description>
  <maintainer email="kai@todo.todo">kai</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend> <!-- 添加 nav_msgs -->
  <build_depend>tf</build_depend> <!-- 添加 tf -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gpm_msg</build_depend>
  <build_depend>forklift_msg</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend> <!-- 添加 nav_msgs -->
  <build_export_depend>tf</build_export_depend> <!-- 添加 tf -->
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend> <!-- 添加 nav_msgs -->
  <exec_depend>tf</exec_depend> <!-- 添加 tf -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gpm_msg</exec_depend>
  <exec_depend>forklift_msg</exec_depend>
  <exec_depend>python3-tk</exec_depend> <!-- 添加 Tkinter 支援 -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>